# ssh-reports-enricher

./: .dockerignore  .geminiignore  .gitignore  CHANGELOG.md  Dockerfile  ENRICHER_FLOW.md  HANDOVER_LOG.md  PROJECT_ANALYSIS.md  README.md  TAG_ANALYSIS.md  docker-compose.yml  pyproject.toml  unclassified_analysis.json  verify_enrich.py
.github/workflows/: deploy.yml
docs/: PREMIUM_DATA_ARCHITECTURE.md
enricher/: __init__.py  article_text_enrich.py  backfill_sync.py  batch_enrich.py  enricher_manager.py  gemini_tag_enrich.py  premium_parser.py  scheduler.py  tag_extractor.py
sql/: batch_operation_indexes.sql  premium_schema_migration.sql
tests/: test_premium_enricher.py  test_table_lock_prevention.py
