[project]
name = "ssh-reports-enricher"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.2",
    "loguru>=0.7.3",
    "ssh-library",
]

[tool.uv.sources]
ssh-library = { path = "../../../../lib/ssh_library", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
